[package]
name = "move-binary-format"
version = "0.0.3"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move Binary Format"
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", default-features = false }
once_cell = { version ="1.7.2", default-features = false, features = ["alloc"] }
proptest = { version = "1.0.0", optional = true }
proptest-derive = { version = "0.3.0", optional = true }
ref-cast = "1.0.6"
variant_count = "1.1.0"
move-core-types = { path = "../core-types", version = "0.0.4" }
serde = { version = "1.0.124", default-features = false }

[dev-dependencies]
proptest = "1.0.0"
proptest-derive = "0.3.0"
move-core-types = { path = "../core-types", features = ["fuzzing"] }
serde_json = "1.0.64"

[features]
default = []
fuzzing = ["proptest", "proptest-derive", "move-core-types/fuzzing"]
